--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,3 +31,5 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        black ./src/
+        flake8
